--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,11 @@
-<% provide(:title, 'Help') %>
+<% provide(:title, 'About Us') %>
 <!DOCTYPE html>
 <html>
   <head>
     <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
   </head>
   <body>
-    <h1>Help</h1>
+    <h1>About Us</h1>
     <p>
       This is the home page for the
       <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
